--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@
     });</script>
     <nav class="sidebar">
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="form.html">Personal Survey</a></li>
