--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     });</script>
 <nav class="sidebar">
     <ul>
-      <li><a href="home.html">Home <i class="fa-solid fa-house"></i></a></li>
+      <li><a href="index.html">Home <i class="fa-solid fa-house"></i></a></li>
       <li><a href="about.html">About <i class="fa-solid fa-info"></i></a></li>
       <li><a href="contact.html">Contact <i class="fa-solid fa-phone"></i></a></li>
       <li><a href="form.html">Personal Survey <i class="fa-solid fa-clipboard"></i></a></li>
