--- a/discord.html
+++ b/discord.html
@@ -32,7 +32,7 @@
             <li><strong><i class="fa-regular fa-user"></i></i> User ID:</strong> 845476284443525161</li>
             <li> <strong><i class="fa-brands fa-hashtag"></i> Username:</strong> shandelier.#0</li>
             <li> <strong>Created:</strong> Sat, 22 May 2021 01:40:54 UTC</li>
-            <a href="home.html"><button class="home"><i class="fa-solid fa-house"></i></button></a>
+            <a href="index.html"><button class="home"><i class="fa-solid fa-house"></i></button></a>
         </ul>
           </div>
     </div>
